# Evalhub

./: .codacy.yml  .gitignore  PROJECT_STRUCTURE.md  README.md  REDIS_CONNECTION_ANALYSIS.md  RESTRUCTURE_SUMMARY.md  SETUP.md  benchmark_test_report.md  evals_notes.md  poster.tex  pyproject.toml  skills-lock.json  start-dev.sh  tsconfig.json  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  apprunner.yaml  bootstrap.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  start.sh  start_all.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_supabase.py  (+17 more)
backend/api/: __init__.py  __main__.py  main.py
backend/auth/: routes.py  service.py
backend/core/: database.py  s3.py  security.py
backend/datasets/: models.py  repository.py  routes.py  service.py
backend/deploy/: cleanup_ecr_repo_images.sh  deploy_ec2.sh  fetch_secrets.sh  haproxy-redis.cfg  sync_secrets.sh  test_local.sh
backend/evaluations/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/experiments/: conf.yaml  eval_example.py  lighteval_sample.ipynb
backend/guidelines/: models.py  repository.py  routes.py  service.py
backend/scripts/: BENCHMARKS_SETUP.md  add_provider_and_model.py  benchmark_utils.py  call_evaluation_endpoints.py  generate_metric_docs.py  populate_benchmarks.py  run_task_requests.py  setup_lighteval.py  side_by_side.py
backend/tests/: benchmark_test_report_1.md  benchmark_test_report_2.md  benchmarks_rows.json  conftest.py  debug_eval.py  download_trace_files.py  run_tests.sh  test_all_benchmarks.py  test_flexible_evaluation.py  test_lighteval_integration.py  test_main.py  test_script.py  test_task_evaluation_endpoint.py  utils.py
backend/users/: models.py  repository.py  routes.py  schemas.py  service.py
(+243 files in other folders)
