[project]
name = "evalhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.0.0",
    "uvicorn>=0.32.1",
    "pydantic[email]>=2.5.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=4.0.1",
    "autoflake>=2.3.1",
    "python-multipart>=0.0.20",
    "openai>=2.8.1",
    "supabase>=2.0.0",
    "PyJWT[crypto]>=2.8.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "litellm[caching]>=1.81.1,<2.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "celery[redis] (>=5.6.2,<6.0.0)",
]

[tool.pytest.ini_options]
addopts = "-v --cov=api --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_third_party = ["lighteval"]
known_first_party = ["api", "scripts"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[tool.poetry.dependencies]
s3fs = {extras = ["boto3"], version = ">=2023.12.0"}
boto3 = "*"
botocore = "*"

[tool.poetry]
packages = [{ include = "api" }]

[tool.poetry.scripts]
dev = "api.__main__:main"

